--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,10 @@
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <awssdk.version>1.12.293</awssdk.version>
+    <awssdk.version>1.12.307</awssdk.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <slf4j.version>1.7.36</slf4j.version>
+    <slf4j.version>2.0.3</slf4j.version>
     <javadoc.version>3.4.1</javadoc.version>
     <jacoco.version>0.8.8</jacoco.version>
     <sign.serverId>gpg-sign</sign.serverId>
@@ -76,12 +76,12 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.13.3</version>
+      <version>2.14.0-rc1</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
-      <version>2.13.3</version>
+      <version>2.14.0-rc1</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
